# SummerTTS-Android

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/edu/tongji/chinese_tts/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  synthesize.cpp
app/src/main/java/edu/tongji/chinese_tts/: MainActivity.java
app/src/main/java/edu/tongji/chinese_tts/utils/: ChineseTTSUtil.java  FileCopyUtil.java  WavHeader.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/edu/tongji/chinese_tts/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
